--- a/IPAddressRange/IPAddressRange.nuspec
+++ b/IPAddressRange/IPAddressRange.nuspec
@@ -12,8 +12,12 @@
     -->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>This library allows you to parse range of IP address string such as "192.168.0.0/24", and can conatins check. This library supports both IPv4 and IPv6.</description>
-    <releaseNotes></releaseNotes>
-    <copyright>Copyright 2012 J.Sakamoto, Ms-PL License.</copyright>
+    <releaseNotes>
+      <![CDATA[
+      v.1.0.3 - Fix: Can not parse the address which contains hex string.
+      ]]>
+    </releaseNotes>
+    <copyright>Copyright 2012-2013 J.Sakamoto, Ms-PL License.</copyright>
     <tags>IPAddress</tags>
   </metadata>
 </package>
