--- a/IPAddressRange/IPAddressRange.nuspec
+++ b/IPAddressRange/IPAddressRange.nuspec
@@ -25,7 +25,7 @@
       v.1.0.3 - Fix: Can not parse the address which contains hex string.
       ]]>
     </releaseNotes>
-    <copyright>Copyright 2012-2015 J.Sakamoto, LGPL v.3.</copyright>
+    <copyright>Copyright 2012-2015 J.Sakamoto, Mozilla Public License 2.0</copyright>
     <tags>IPAddress</tags>
   </metadata>
 </package>
