--- a/IPAddressRange/IPAddressRange.nuspec
+++ b/IPAddressRange/IPAddressRange.nuspec
@@ -14,6 +14,7 @@
     <description>This library allows you to parse range of IP address string such as "192.168.0.0/24" and "192.168.0.0/255.255.255.0" and "192.168.0.0-192.168.0.255", and can conatins check. This library supports both IPv4 and IPv6.</description>
     <releaseNotes>
       <![CDATA[
+      v.1.6.0 - Enhance: Add "ToCidrString()" and "GetprefixLength()" method.
       v.1.5.0 - Enhance: Add constructors variation / Save memory usage.
       v.1.4.0 - Enhance: Add IEnumerable<IPAddress> support.
       v.1.3.0 - Enhance: support both "hyphen (-)" (0x002D) and "dash (–)" (0x2013) at begin-end format.
@@ -26,7 +27,7 @@
       v.1.0.3 - Fix: Can not parse the address which contains hex string.
       ]]>
     </releaseNotes>
-    <copyright>Copyright 2012-2015 J.Sakamoto, Mozilla Public License 2.0</copyright>
+    <copyright>Copyright 2012-2016 J.Sakamoto, Mozilla Public License 2.0</copyright>
     <tags>IPAddress</tags>
   </metadata>
 </package>
