Add rule of "Code Analysis": CA1062 and CA2208
- CA1062: validate parameter before using it.
- CA2208: the 'paramName' argument to a 'ArgumentException' constructor. Replace this argument with one of the method's parameter names.

--- a/IPAddressRange/IPAddressRange.csproj
+++ b/IPAddressRange/IPAddressRange.csproj
@@ -21,6 +21,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>IPAddressRange.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -51,6 +52,7 @@
       <Link>README.md</Link>
     </None>
     <None Include="IPAddressRange.nuspec" />
+    <None Include="IPAddressRange.ruleset" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
