--- a/IPAddressRange.Test/packages.config
+++ b/IPAddressRange.Test/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ChainingAssertion" version="1.6.1.0" />
+  <package id="ChainingAssertion.Bin" version="1.8.0.0" targetFramework="net40" />
 </packages>
