--- a/IPAddressRange/IPAddressRange.Test/IPAddressRange.Test.csproj
+++ b/IPAddressRange/IPAddressRange.Test/IPAddressRange.Test.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.10.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -54,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ChainingAssertion.MSTest.cs" />
+    <Compile Include="IPAddressRangeJsonTest.cs" />
     <Compile Include="IPAddressRangeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BitsTest.cs" />
