Replace obsoleted constructor to "Parse" static method, and split DataContractSerlializer test to individual source file.

--- a/IPAddressRange.Test/IPAddressRange.Test.csproj
+++ b/IPAddressRange.Test/IPAddressRange.Test.csproj
@@ -66,6 +66,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BitsTest.cs" />
+    <Compile Include="IPAddressRangeDataContractSerializerTest.cs" />
     <Compile Include="IPAddressRangeParseTest.cs" />
     <Compile Include="IPAddressRangeJsonTest.cs" />
     <Compile Include="IPAddressRangeTest.cs" />
