--- a/IPAddressRange/IPAddressRange.Core.csproj
+++ b/IPAddressRange/IPAddressRange.Core.csproj
@@ -15,6 +15,7 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <Version>2.0.0.0-beta</Version>
   </PropertyGroup>
 
 </Project>
