--- a/IPAddressRange/IPAddressRange.nuspec
+++ b/IPAddressRange/IPAddressRange.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>IPAddressRange</id>
-    <version>1.6.2.7</version>
+    <version>2.0.0.0-beta</version>
     <authors>J.Sakamoto</authors>
     <owners>J.Sakamoto</owners>
     <licenseUrl>https://github.com/jsakamoto/ipaddressrange/blob/master/LICENSE</licenseUrl>
@@ -14,6 +14,8 @@
     <description>This library allows you to parse range of IP address string such as "192.168.0.0/24" and "192.168.0.0/255.255.255.0" and "192.168.0.0-192.168.0.255", and can conatins check. This library supports both IPv4 and IPv6.</description>
     <releaseNotes>
       <![CDATA[
+      v.2.0.0 - [BREAKING CHANGE] Truncate .NET 4.0 support.
+              - Enhance: can serialize/deserialize json text by JSON.NET
       v.1.6.2 - Support: .NET Standard 1.4 (.NET Core) and UWP
       v.1.6.1 - Fix: Add some parameter checks for throwing ArgumentNullException
       v.1.6.0 - Enhance: Add "ToCidrString()" and "GetprefixLength()" method.
