--- a/IPAddressRange.Test.Core/IPAddressRange.Test.Core.csproj
+++ b/IPAddressRange.Test.Core/IPAddressRange.Test.Core.csproj
@@ -20,10 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ChainingAssertion.Bin" Version="1.8.1.3-beta" />
+    <PackageReference Include="ChainingAssertion.Bin" Version="1.8.1.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.1.11" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.1.11" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.1.18" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
   </ItemGroup>
 
   <ItemGroup>
