Upgrade project style to new SDK style.

--- a/IPAddressRange.Test.Core/IPAddressRange.Test.Core.csproj
+++ b/IPAddressRange.Test.Core/IPAddressRange.Test.Core.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IPAddressRange\IPAddressRange.Core.csproj" />
+    <ProjectReference Include="..\IPAddressRange\IPAddressRange.csproj" />
   </ItemGroup>
 
   <ItemGroup>
